// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Configuration Snapshots ConfigurationActions Component should match snapshot in normal state: actions-normal 1`] = `
<div>
  <button>
    Save Configuration
  </button>
</div>
`;

exports[`Configuration Snapshots ConfigurationActions Component should match snapshot in saving state: actions-saving 1`] = `
<div>
  <button>
    Saving...
  </button>
</div>
`;

exports[`Configuration Snapshots ConfigurationHeader Component should match snapshot header: config-header 1`] = `
<div>
  <div
    animate="[object Object]"
    initial="[object Object]"
    transition="[object Object]"
  >
    <h1
      font-weight="bold"
    >
      Configuration Center
    </h1>
    <span>
      Manage your application settings and preferences
    </span>
  </div>
</div>
`;

exports[`Configuration Snapshots ConfigurationStatusMessages Component should match snapshot with error message: status-error 1`] = `null`;

exports[`Configuration Snapshots ConfigurationStatusMessages Component should match snapshot with no messages: status-none 1`] = `null`;

exports[`Configuration Snapshots ConfigurationStatusMessages Component should match snapshot with success message: status-success 1`] = `
<div
  animate="[object Object]"
  initial="[object Object]"
  transition="[object Object]"
>
  <div
    class="MuiCard-root"
  >
    <div>
      <div>
        <svg
          color="success"
          data-icon="CheckCircle"
        />
        <span>
          Configuration saved successfully!
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Configuration Snapshots ConfigurationStatusMessages Component should match snapshot with validation errors: status-validation-errors 1`] = `
<div
  animate="[object Object]"
  initial="[object Object]"
  transition="[object Object]"
>
  <div
    class="MuiCard-root"
  >
    <div>
      <div>
        <svg
          color="error"
          data-icon="ErrorOutline"
        />
        <span
          font-weight="medium"
        >
          Configuration Errors
        </span>
      </div>
      <div>
        <span>
          • 
          Port must be between 1-65535
        </span>
        <span>
          • 
          Context length must be positive
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Configuration Snapshots ConfigurationTabs Component should match snapshot with Advanced tab active: tabs-advanced 1`] = `
<div
  class="MuiCard-root"
>
  <div>
    <button
      label="General Settings"
    />
    <button
      label="Llama-Server Settings"
    />
    <button
      label="Advanced"
    />
    <button
      label="Logger Settings"
    />
  </div>
</div>
`;

exports[`Configuration Snapshots ConfigurationTabs Component should match snapshot with General tab active: tabs-general 1`] = `
<div
  class="MuiCard-root"
>
  <div>
    <button
      label="General Settings"
    />
    <button
      label="Llama-Server Settings"
    />
    <button
      label="Advanced"
    />
    <button
      label="Logger Settings"
    />
  </div>
</div>
`;

exports[`Configuration Snapshots ConfigurationTabs Component should match snapshot with LlamaServer tab active: tabs-llama-server 1`] = `
<div
  class="MuiCard-root"
>
  <div>
    <button
      label="General Settings"
    />
    <button
      label="Llama-Server Settings"
    />
    <button
      label="Advanced"
    />
    <button
      label="Logger Settings"
    />
  </div>
</div>
`;

exports[`Configuration Snapshots ConfigurationTabs Component should match snapshot with Logger tab active: tabs-logger 1`] = `
<div
  class="MuiCard-root"
>
  <div>
    <button
      label="General Settings"
    />
    <button
      label="Llama-Server Settings"
    />
    <button
      label="Advanced"
    />
    <button
      label="Logger Settings"
    />
  </div>
</div>
`;

exports[`Configuration Snapshots Form States should match snapshot with dirty form: form-dirty 1`] = `
<div
  animate="[object Object]"
  initial="[object Object]"
  transition="[object Object]"
>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <span
        font-weight="bold"
      >
        <div>
          <svg
            data-icon="Settings"
          />
        </div>
        General Settings
      </span>
    </div>
    <div
      data-testid="grid"
    >
      <div
        data-testid="grid"
      >
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Base Path"
              name="basePath"
              type="text"
            >
              <input
                data-testid="basePath"
                inputlabelprops="[object Object]"
                label="Base Path"
                name="basePath"
                type="text"
                value=""
              />
              <span
                class=""
                data-testid="basePath-helper-text"
              >
                Path to your models directory
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div>
              <label
                id="logLevel-label"
              >
                Log Level
              </label>
              <select
                label="Log Level"
                labelid="logLevel-label"
                role="combobox"
              >
                <option>
                  Debug
                </option>
                <option>
                  Info
                </option>
                <option>
                  Warning
                </option>
                <option>
                  Error
                </option>
              </select>
              <span>
                Logging verbosity level
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Max Concurrent Models"
              name="maxConcurrentModels"
              type="number"
            >
              <input
                data-testid="maxConcurrentModels"
                inputlabelprops="[object Object]"
                label="Max Concurrent Models"
                name="maxConcurrentModels"
                type="text"
                value="1"
              />
              <span
                class=""
                data-testid="maxConcurrentModels-helper-text"
              >
                Parallel mode: Multiple models can be loaded simultaneously
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <label>
              <input
                aria-checked="false"
                role="switch"
                type="checkbox"
              />
              <span>
                <span>
                  Auto Update
                  <span
                    style="display: block; font-size: 0.75rem; color: rgba(0, 0, 0, 0.6); margin-top: 2px;"
                  >
                    Automatically update models and dependencies
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <label>
              <input
                aria-checked="false"
                role="switch"
                type="checkbox"
              />
              <span>
                <span>
                  Notifications Enabled
                  <span
                    style="display: block; font-size: 0.75rem; color: rgba(0, 0, 0, 0.6); margin-top: 2px;"
                  >
                    Receive system alerts and notifications
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Llama-Server Path"
              name="llamaServerPath"
              type="text"
            >
              <input
                data-testid="llamaServerPath"
                inputlabelprops="[object Object]"
                label="Llama-Server Path"
                name="llamaServerPath"
                type="text"
                value=""
              />
              <span
                class=""
                data-testid="llamaServerPath-helper-text"
              >
                Path to llama-server executable
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <hr />
    </div>
  </div>
</div>
`;

exports[`Configuration Snapshots Form States should match snapshot with invalid form: form-invalid 1`] = `
<div
  animate="[object Object]"
  initial="[object Object]"
  transition="[object Object]"
>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <span
        font-weight="bold"
      >
        <div>
          <svg
            data-icon="Settings"
          />
        </div>
        General Settings
      </span>
    </div>
    <div
      data-testid="grid"
    >
      <div
        data-testid="grid"
      >
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Base Path"
              name="basePath"
              type="text"
            >
              <input
                data-testid="basePath"
                inputlabelprops="[object Object]"
                label="Base Path"
                name="basePath"
                type="text"
                value=""
              />
              <span
                class=""
                data-testid="basePath-helper-text"
              >
                Path to your models directory
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div>
              <label
                id="logLevel-label"
              >
                Log Level
              </label>
              <select
                label="Log Level"
                labelid="logLevel-label"
                role="combobox"
              >
                <option>
                  Debug
                </option>
                <option>
                  Info
                </option>
                <option>
                  Warning
                </option>
                <option>
                  Error
                </option>
              </select>
              <span>
                Logging verbosity level
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Max Concurrent Models"
              name="maxConcurrentModels"
              type="number"
            >
              <input
                data-testid="maxConcurrentModels"
                inputlabelprops="[object Object]"
                label="Max Concurrent Models"
                name="maxConcurrentModels"
                type="text"
                value="1"
              />
              <span
                class=""
                data-testid="maxConcurrentModels-helper-text"
              >
                Parallel mode: Multiple models can be loaded simultaneously
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <label>
              <input
                aria-checked="false"
                role="switch"
                type="checkbox"
              />
              <span>
                <span>
                  Auto Update
                  <span
                    style="display: block; font-size: 0.75rem; color: rgba(0, 0, 0, 0.6); margin-top: 2px;"
                  >
                    Automatically update models and dependencies
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <label>
              <input
                aria-checked="false"
                role="switch"
                type="checkbox"
              />
              <span>
                <span>
                  Notifications Enabled
                  <span
                    style="display: block; font-size: 0.75rem; color: rgba(0, 0, 0, 0.6); margin-top: 2px;"
                  >
                    Receive system alerts and notifications
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Llama-Server Path"
              name="llamaServerPath"
              type="text"
            >
              <input
                data-testid="llamaServerPath"
                inputlabelprops="[object Object]"
                label="Llama-Server Path"
                name="llamaServerPath"
                type="text"
                value=""
              />
              <span
                class=""
                data-testid="llamaServerPath-helper-text"
              >
                Path to llama-server executable
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <hr />
    </div>
  </div>
</div>
`;

exports[`Configuration Snapshots Form States should match snapshot with pristine form: form-pristine 1`] = `
<div
  animate="[object Object]"
  initial="[object Object]"
  transition="[object Object]"
>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <span
        font-weight="bold"
      >
        <div>
          <svg
            data-icon="Settings"
          />
        </div>
        General Settings
      </span>
    </div>
    <div
      data-testid="grid"
    >
      <div
        data-testid="grid"
      >
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Base Path"
              name="basePath"
              type="text"
            >
              <input
                data-testid="basePath"
                inputlabelprops="[object Object]"
                label="Base Path"
                name="basePath"
                type="text"
                value=""
              />
              <span
                class=""
                data-testid="basePath-helper-text"
              >
                Path to your models directory
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div>
              <label
                id="logLevel-label"
              >
                Log Level
              </label>
              <select
                label="Log Level"
                labelid="logLevel-label"
                role="combobox"
              >
                <option>
                  Debug
                </option>
                <option>
                  Info
                </option>
                <option>
                  Warning
                </option>
                <option>
                  Error
                </option>
              </select>
              <span>
                Logging verbosity level
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Max Concurrent Models"
              name="maxConcurrentModels"
              type="number"
            >
              <input
                data-testid="maxConcurrentModels"
                inputlabelprops="[object Object]"
                label="Max Concurrent Models"
                name="maxConcurrentModels"
                type="text"
                value="1"
              />
              <span
                class=""
                data-testid="maxConcurrentModels-helper-text"
              >
                Parallel mode: Multiple models can be loaded simultaneously
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <label>
              <input
                aria-checked="false"
                role="switch"
                type="checkbox"
              />
              <span>
                <span>
                  Auto Update
                  <span
                    style="display: block; font-size: 0.75rem; color: rgba(0, 0, 0, 0.6); margin-top: 2px;"
                  >
                    Automatically update models and dependencies
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <label>
              <input
                aria-checked="false"
                role="switch"
                type="checkbox"
              />
              <span>
                <span>
                  Notifications Enabled
                  <span
                    style="display: block; font-size: 0.75rem; color: rgba(0, 0, 0, 0.6); margin-top: 2px;"
                  >
                    Receive system alerts and notifications
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Llama-Server Path"
              name="llamaServerPath"
              type="text"
            >
              <input
                data-testid="llamaServerPath"
                inputlabelprops="[object Object]"
                label="Llama-Server Path"
                name="llamaServerPath"
                type="text"
                value=""
              />
              <span
                class=""
                data-testid="llamaServerPath-helper-text"
              >
                Path to llama-server executable
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <hr />
    </div>
  </div>
</div>
`;

exports[`Configuration Snapshots Form States should match snapshot with valid form: form-valid 1`] = `
<div
  animate="[object Object]"
  initial="[object Object]"
  transition="[object Object]"
>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <span
        font-weight="bold"
      >
        <div>
          <svg
            data-icon="Settings"
          />
        </div>
        General Settings
      </span>
    </div>
    <div
      data-testid="grid"
    >
      <div
        data-testid="grid"
      >
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Base Path"
              name="basePath"
              type="text"
            >
              <input
                data-testid="basePath"
                inputlabelprops="[object Object]"
                label="Base Path"
                name="basePath"
                type="text"
                value=""
              />
              <span
                class=""
                data-testid="basePath-helper-text"
              >
                Path to your models directory
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div>
              <label
                id="logLevel-label"
              >
                Log Level
              </label>
              <select
                label="Log Level"
                labelid="logLevel-label"
                role="combobox"
              >
                <option>
                  Debug
                </option>
                <option>
                  Info
                </option>
                <option>
                  Warning
                </option>
                <option>
                  Error
                </option>
              </select>
              <span>
                Logging verbosity level
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Max Concurrent Models"
              name="maxConcurrentModels"
              type="number"
            >
              <input
                data-testid="maxConcurrentModels"
                inputlabelprops="[object Object]"
                label="Max Concurrent Models"
                name="maxConcurrentModels"
                type="text"
                value="1"
              />
              <span
                class=""
                data-testid="maxConcurrentModels-helper-text"
              >
                Parallel mode: Multiple models can be loaded simultaneously
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <label>
              <input
                aria-checked="false"
                role="switch"
                type="checkbox"
              />
              <span>
                <span>
                  Auto Update
                  <span
                    style="display: block; font-size: 0.75rem; color: rgba(0, 0, 0, 0.6); margin-top: 2px;"
                  >
                    Automatically update models and dependencies
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <label>
              <input
                aria-checked="false"
                role="switch"
                type="checkbox"
              />
              <span>
                <span>
                  Notifications Enabled
                  <span
                    style="display: block; font-size: 0.75rem; color: rgba(0, 0, 0, 0.6); margin-top: 2px;"
                  >
                    Receive system alerts and notifications
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Llama-Server Path"
              name="llamaServerPath"
              type="text"
            >
              <input
                data-testid="llamaServerPath"
                inputlabelprops="[object Object]"
                label="Llama-Server Path"
                name="llamaServerPath"
                type="text"
                value=""
              />
              <span
                class=""
                data-testid="llamaServerPath-helper-text"
              >
                Path to llama-server executable
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <hr />
    </div>
  </div>
</div>
`;

exports[`Configuration Snapshots GeneralSettingsTab Component should match snapshot in dark mode: general-settings-dark 1`] = `
<div
  animate="[object Object]"
  initial="[object Object]"
  transition="[object Object]"
>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <span
        font-weight="bold"
      >
        <div>
          <svg
            data-icon="Settings"
          />
        </div>
        General Settings
      </span>
    </div>
    <div
      data-testid="grid"
    >
      <div
        data-testid="grid"
      >
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Base Path"
              name="basePath"
              type="text"
            >
              <input
                data-testid="basePath"
                inputlabelprops="[object Object]"
                label="Base Path"
                name="basePath"
                type="text"
                value=""
              />
              <span
                class=""
                data-testid="basePath-helper-text"
              >
                Path to your models directory
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div>
              <label
                id="logLevel-label"
              >
                Log Level
              </label>
              <select
                label="Log Level"
                labelid="logLevel-label"
                role="combobox"
              >
                <option>
                  Debug
                </option>
                <option>
                  Info
                </option>
                <option>
                  Warning
                </option>
                <option>
                  Error
                </option>
              </select>
              <span>
                Logging verbosity level
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Max Concurrent Models"
              name="maxConcurrentModels"
              type="number"
            >
              <input
                data-testid="maxConcurrentModels"
                inputlabelprops="[object Object]"
                label="Max Concurrent Models"
                name="maxConcurrentModels"
                type="text"
                value="1"
              />
              <span
                class=""
                data-testid="maxConcurrentModels-helper-text"
              >
                Parallel mode: Multiple models can be loaded simultaneously
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <label>
              <input
                aria-checked="false"
                role="switch"
                type="checkbox"
              />
              <span>
                <span>
                  Auto Update
                  <span
                    style="display: block; font-size: 0.75rem; color: rgba(0, 0, 0, 0.6); margin-top: 2px;"
                  >
                    Automatically update models and dependencies
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <label>
              <input
                aria-checked="false"
                role="switch"
                type="checkbox"
              />
              <span>
                <span>
                  Notifications Enabled
                  <span
                    style="display: block; font-size: 0.75rem; color: rgba(0, 0, 0, 0.6); margin-top: 2px;"
                  >
                    Receive system alerts and notifications
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Llama-Server Path"
              name="llamaServerPath"
              type="text"
            >
              <input
                data-testid="llamaServerPath"
                inputlabelprops="[object Object]"
                label="Llama-Server Path"
                name="llamaServerPath"
                type="text"
                value=""
              />
              <span
                class=""
                data-testid="llamaServerPath-helper-text"
              >
                Path to llama-server executable
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <hr />
    </div>
  </div>
</div>
`;

exports[`Configuration Snapshots GeneralSettingsTab Component should match snapshot in light mode: general-settings-light 1`] = `
<div
  animate="[object Object]"
  initial="[object Object]"
  transition="[object Object]"
>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <span
        font-weight="bold"
      >
        <div>
          <svg
            data-icon="Settings"
          />
        </div>
        General Settings
      </span>
    </div>
    <div
      data-testid="grid"
    >
      <div
        data-testid="grid"
      >
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Base Path"
              name="basePath"
              type="text"
            >
              <input
                data-testid="basePath"
                inputlabelprops="[object Object]"
                label="Base Path"
                name="basePath"
                type="text"
                value=""
              />
              <span
                class=""
                data-testid="basePath-helper-text"
              >
                Path to your models directory
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div>
              <label
                id="logLevel-label"
              >
                Log Level
              </label>
              <select
                label="Log Level"
                labelid="logLevel-label"
                role="combobox"
              >
                <option>
                  Debug
                </option>
                <option>
                  Info
                </option>
                <option>
                  Warning
                </option>
                <option>
                  Error
                </option>
              </select>
              <span>
                Logging verbosity level
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Max Concurrent Models"
              name="maxConcurrentModels"
              type="number"
            >
              <input
                data-testid="maxConcurrentModels"
                inputlabelprops="[object Object]"
                label="Max Concurrent Models"
                name="maxConcurrentModels"
                type="text"
                value="1"
              />
              <span
                class=""
                data-testid="maxConcurrentModels-helper-text"
              >
                Parallel mode: Multiple models can be loaded simultaneously
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <label>
              <input
                aria-checked="false"
                role="switch"
                type="checkbox"
              />
              <span>
                <span>
                  Auto Update
                  <span
                    style="display: block; font-size: 0.75rem; color: rgba(0, 0, 0, 0.6); margin-top: 2px;"
                  >
                    Automatically update models and dependencies
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <label>
              <input
                aria-checked="false"
                role="switch"
                type="checkbox"
              />
              <span>
                <span>
                  Notifications Enabled
                  <span
                    style="display: block; font-size: 0.75rem; color: rgba(0, 0, 0, 0.6); margin-top: 2px;"
                  >
                    Receive system alerts and notifications
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Llama-Server Path"
              name="llamaServerPath"
              type="text"
            >
              <input
                data-testid="llamaServerPath"
                inputlabelprops="[object Object]"
                label="Llama-Server Path"
                name="llamaServerPath"
                type="text"
                value=""
              />
              <span
                class=""
                data-testid="llamaServerPath-helper-text"
              >
                Path to llama-server executable
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <hr />
    </div>
  </div>
</div>
`;

exports[`Configuration Snapshots GeneralSettingsTab Component should match snapshot with validation errors: general-settings-errors 1`] = `
<div
  animate="[object Object]"
  initial="[object Object]"
  transition="[object Object]"
>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <span
        font-weight="bold"
      >
        <div>
          <svg
            data-icon="Settings"
          />
        </div>
        General Settings
      </span>
    </div>
    <div
      data-testid="grid"
    >
      <div
        data-testid="grid"
      >
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Base Path"
              name="basePath"
              type="text"
            >
              <input
                data-testid="basePath"
                inputlabelprops="[object Object]"
                label="Base Path"
                name="basePath"
                type="text"
                value=""
              />
              <span
                class=""
                data-testid="basePath-helper-text"
              >
                Path to your models directory
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div>
              <label
                id="logLevel-label"
              >
                Log Level
              </label>
              <select
                label="Log Level"
                labelid="logLevel-label"
                role="combobox"
              >
                <option>
                  Debug
                </option>
                <option>
                  Info
                </option>
                <option>
                  Warning
                </option>
                <option>
                  Error
                </option>
              </select>
              <span>
                Logging verbosity level
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Max Concurrent Models"
              name="maxConcurrentModels"
              type="number"
            >
              <input
                data-testid="maxConcurrentModels"
                inputlabelprops="[object Object]"
                label="Max Concurrent Models"
                name="maxConcurrentModels"
                type="text"
                value="1"
              />
              <span
                class=""
                data-testid="maxConcurrentModels-helper-text"
              >
                Parallel mode: Multiple models can be loaded simultaneously
              </span>
            </div>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <label>
              <input
                aria-checked="false"
                role="switch"
                type="checkbox"
              />
              <span>
                <span>
                  Auto Update
                  <span
                    style="display: block; font-size: 0.75rem; color: rgba(0, 0, 0, 0.6); margin-top: 2px;"
                  >
                    Automatically update models and dependencies
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <label>
              <input
                aria-checked="false"
                role="switch"
                type="checkbox"
              />
              <span>
                <span>
                  Notifications Enabled
                  <span
                    style="display: block; font-size: 0.75rem; color: rgba(0, 0, 0, 0.6); margin-top: 2px;"
                  >
                    Receive system alerts and notifications
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          data-testid="grid"
        >
          <div>
            <div
              inputlabelprops="[object Object]"
              label="Llama-Server Path"
              name="llamaServerPath"
              type="text"
            >
              <input
                data-testid="llamaServerPath"
                inputlabelprops="[object Object]"
                label="Llama-Server Path"
                name="llamaServerPath"
                type="text"
                value=""
              />
              <span
                class=""
                data-testid="llamaServerPath-helper-text"
              >
                Path to llama-server executable
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <hr />
    </div>
  </div>
</div>
`;

exports[`Configuration Snapshots ModernConfiguration Component should match snapshot with General tab active: config-general-tab 1`] = `
<div>
  <div>
    <div
      data-testid="skeleton"
    />
    <div>
      <div
        data-testid="skeleton"
      />
      <div
        data-testid="skeleton"
      />
    </div>
    <div>
      <div
        data-testid="skeleton"
      />
      <div
        data-testid="skeleton"
      />
    </div>
    <div>
      <div
        data-testid="skeleton"
      />
      <div
        data-testid="skeleton"
      />
    </div>
    <div>
      <div
        data-testid="skeleton"
      />
      <div
        data-testid="skeleton"
      />
    </div>
    <div>
      <div
        data-testid="skeleton"
      />
      <div
        data-testid="skeleton"
      />
    </div>
    <div>
      <div
        data-testid="skeleton"
      />
      <div
        data-testid="skeleton"
      />
    </div>
    <div>
      <div
        data-testid="skeleton"
      />
      <div
        data-testid="skeleton"
      />
    </div>
    <div>
      <div
        data-testid="skeleton"
      />
      <div
        data-testid="skeleton"
      />
    </div>
    <div>
      <div
        data-testid="skeleton"
      />
      <div
        data-testid="skeleton"
      />
    </div>
  </div>
</div>
`;

exports[`Configuration Snapshots ModernConfiguration Component should match snapshot with loading state: config-loading 1`] = `
<div>
  <div>
    <div
      data-testid="skeleton"
    />
    <div>
      <div
        data-testid="skeleton"
      />
      <div
        data-testid="skeleton"
      />
    </div>
    <div>
      <div
        data-testid="skeleton"
      />
      <div
        data-testid="skeleton"
      />
    </div>
    <div>
      <div
        data-testid="skeleton"
      />
      <div
        data-testid="skeleton"
      />
    </div>
    <div>
      <div
        data-testid="skeleton"
      />
      <div
        data-testid="skeleton"
      />
    </div>
    <div>
      <div
        data-testid="skeleton"
      />
      <div
        data-testid="skeleton"
      />
    </div>
    <div>
      <div
        data-testid="skeleton"
      />
      <div
        data-testid="skeleton"
      />
    </div>
    <div>
      <div
        data-testid="skeleton"
      />
      <div
        data-testid="skeleton"
      />
    </div>
    <div>
      <div
        data-testid="skeleton"
      />
      <div
        data-testid="skeleton"
      />
    </div>
    <div>
      <div
        data-testid="skeleton"
      />
      <div
        data-testid="skeleton"
      />
    </div>
  </div>
</div>
`;
